website/websites/u64q/code/binarytrees.4.scala.log

Sat, 19 Jun 2010 02:15:35 GMT

MAKE:
mv binarytrees.scala-4.scala binarytrees.scala
/usr/local/src/scala-2.8.0.RC6/bin/scalac binarytrees.scala
binarytrees.scala:42: error: not found: type int
  def apply(i: int, depth: int): Tree = {
               ^
binarytrees.scala:42: error: not found: type int
  def apply(i: int, depth: int): Tree = {
                           ^
binarytrees.scala:49: error: not found: type int
    def isum: int = {
              ^
binarytrees.scala:48: error: not found: type int
final class Tree(val i: int,val left: Tree, val right: Tree) { //  depth: int) {
                        ^
four errors found
make: [binarytrees.scala-4.scala_run] Error 1 (ignored)
4.19s to complete and log all make actions

COMMAND LINE:
 /usr/local/src/jdk1.6.0_18/bin/java -server  -Xbootclasspath/a:/usr/local/src/scala-2.8.0.RC6/lib/scala-library.jar binarytrees 12

PROGRAM FAILED 


PROGRAM OUTPUT:

Exception in thread "main" java.lang.NoClassDefFoundError: binarytrees
Caused by: java.lang.ClassNotFoundException: binarytrees
	at java.net.URLClassLoader$1.run(URLClassLoader.java:202)
	at java.security.AccessController.doPrivileged(Native Method)
	at java.net.URLClassLoader.findClass(URLClassLoader.java:190)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:307)
	at sun.misc.Launcher$AppClassLoader.loadClass(Launcher.java:301)
	at java.lang.ClassLoader.loadClass(ClassLoader.java:248)
Could not find the main class: binarytrees.  Program will exit.
